<resources>
    <string name="app_name">Postgraduate</string>
    <string name="label_login">LOGIN</string>
    <string name="buttonLogin">LOGIN</string>
    <string name="label_semester">SEMESTER</string>
    <string name="buttonAsemester">Α ΕΞΑΜΗΝΟ</string>
    <string name="buttonBsemester">Β ΕΞΑΜΗΝΟ</string>
    <string name="buttonCsemester">Γ ΕΞΑΜΗΝΟ</string>
    <string name="buttonInfo">INFO</string>
    <string name="buttonPrevious1">ΠΙΣΩ</string>
    <string name="label_asemester">Α ΕΞΑΜΗΝΟ</string>
    <string name="button_previous2">ΠΙΣΩ</string>
    <string name="textViewBsemester">Β ΕΞΑΜΗΝΟ</string>
    <string name="button_previous3">ΠΙΣΩ</string>
    <string name="textViewCsemester">Γ ΕΞΑΜΗΝΟ</string>
    <string name="button_previous4">ΠΙΣΩ</string>
    <string name="label_info">INFO</string>
    <string name="button_serres">ΣΕΡΡΕΣ</string>
    <string name="button_teiofserres">ΤΕΙ ΣΕΡΡΩΝ</string>
    <string name="button_informaticsandcommunications">ΠΛΗΡΟΦΟΡΙΚΗΣ ΚΑΙ ΕΠΙΚΟΙΝΩΝΙΩΝ</string>
    <string name="button_postgraduate">ΜΠΣ \"ΕΦΑΡΜΟΣΜΕΝΗ ΠΛΗΡΟΦΟΡΙΚΗ\"</string>
    <string name="button_previous5">ΠΙΣΩ</string>
    <string name="label_presencesasemesterprofessor">Α ΕΞΑΜΗΝΟ</string>
    <string name="button_insertion">ΚΑΤΑΧΩΡΗΣΗ</string>
    <string name="button_previous9">ΠΙΣΩ</string>
    <string name="label_presences_asemester_student">Α ΕΞΑΜΗΝΟ</string>
    <string name="button_previous6">ΠΙΣΩ</string>

    <string name="button_entry">ΚΑΤΑΧΩΡΗΣΗ</string>
    <string name="button_previous_bsemestero_professor">ΠΙΣΩ</string>
    <string name="button_previous7">ΠΙΣΩ</string>
    <string name="label_presences_asemester_professor">Α ΕΞΑΜΗΝΟ ΠΑΡΟΥΣΙΕΣ</string>
    <string name="label_presences_asemesterstudent">Α ΕΞΑΜΗΝΟ ΠΑΡΟΥΣΙΕΣ</string>
    <string name="user_item_presences_lesson_professor_1" />
    <string name="button_previous">ΠΙΣΩ</string>
    <string name="label_presences_bsemester_student">Β ΕΞΑΜΗΝΟ ΠΑΡΟΥΣΙΕΣ</string>
    <string name="presences_bsemester_professor">Β ΕΞΑΜΗΝΟ ΠΑΡΟΥΣΙΕΣ</string>
    <string name="presences_bsemester_student">Β ΕΞΑΜΗΝΟ ΠΑΡΟΥΣΙΕΣ</string>
    <string name="semester">ΕΞΑΜΗΝΑ</string>
    <string name="insertion_button">ΚΑΤΑΧΩΡΗΣΗ</string>
    <string name="butt_insertion_1">ΚΑΤΑΧΩΡΗΣΗ</string>
    <string name="previous_button">ΠΙΣΩ</string>
    <string name="presencesAsemesterProfessor">Α ΕΞΑΜΗΝΟ ΠΑΡΟΥΣΙΕΣ</string>
    <string name="buttonInsertion">ΚΑΤΑΧΩΡΗΣΗ</string>
    <string name="buttonPrevious9">ΠΙΣΩ</string>
    <string name="buttonEntry">ΚΑΤΑΧΩΡΗΣΗ</string>
    <string name="button_previous_bsemester_professor">ΠΙΣΩ</string>
    <string name="textViewPresencesBsemesterProfessor">ΠΑΡΟΥΣΙΕΣ Β ΕΞΑΜΗΝΟ</string>
</resources>
