<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PresencesAsemesterProfessorActivity">

    <TextView
        android:id="@+id/textViewPresencesAsemesterProfessor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/presencesAsemesterProfessor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonPrevious9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/buttonPrevious9"
        app:layout_constraintStart_toEndOf="@+id/buttonInsertion"
        app:layout_constraintTop_toBottomOf="@+id/listViewPresencesAsemesterProfessor" />

    <Button
        android:id="@+id/buttonInsertion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="24dp"
        android:text="@string/buttonInsertion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listViewPresencesAsemesterProfessor" />

    <ListView
        android:id="@+id/listViewPresencesAsemesterProfessor"
        android:layout_width="wrap_content"
        android:layout_height="385dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPresencesAsemesterProfessor" />
</androidx.constraintlayout.widget.ConstraintLayout>