<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PresencesBsemesterProfessorActivity">

    <TextView
        android:id="@+id/textViewPresencesBsemesterProfessor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/textViewPresencesBsemesterProfessor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonEntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="24dp"
        android:text="@string/buttonEntry"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listViewPresencesBsemesterProfessor" />

    <Button
        android:id="@+id/buttonPreviousBsemesterProfessor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/button_previous_bsemester_professor"
        app:layout_constraintStart_toEndOf="@+id/buttonEntry"
        app:layout_constraintTop_toBottomOf="@+id/listViewPresencesBsemesterProfessor" />

    <ListView
        android:id="@+id/listViewPresencesBsemesterProfessor"
        android:layout_width="wrap_content"
        android:layout_height="385dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPresencesBsemesterProfessor" />
</androidx.constraintlayout.widget.ConstraintLayout>